--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  background-image: url('img/background.jpg');
+  background-image: url('background.jpg');
   background-size: cover;
   background-position: center;
 }
